--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,10 @@
-version: '3.8'
-
+version: '3'
 services:
-  se-server:
-    image: registry.kedi-server.de/space_engineers_server:latest
-    container_name: spaceengineers
-    restart: unless-stopped
-    volumes:
-      # left side: your docker-host machine
-      # right side: the paths in the image (!!do not change!!)
-      - /appdata/space-engineers/plugins:/appdata/space-engineers/plugins
-      - /appdata/space-engineers/instances:/appdata/space-engineers/instances
-      - /appdata/space-engineers/SpaceEngineersDedicated:/appdata/space-engineers/SpaceEngineersDedicated
-      - /appdata/space-engineers/steamcmd:/root/.steam
+  space-engineers-server:
+    image: space-engineers-server
+    container_name: registry.kedi-server.de/space_engineers_server:latest
     ports:
-      - target: 27016
-        published: 27016
-        protocol: udp
-        mode: host
-      - target: 8080
-        published: 18080
-        protocol: tcp
-        mode: host
-    environment:
-      - WINEDEBUG=-all
-      - INSTANCE_NAME=SE
-      - PUBLIC_IP=84.247.164.133
-      # public ip required for healthcheck
+      - "27016:27016/tcp"
+      - "27016:27016/udp"
+      - "8888:8080"
+    restart: unless-stopped
