--- a/SE/SpaceEngineers-Dedicated.cfg
+++ b/SE/SpaceEngineers-Dedicated.cfg
@@ -2,24 +2,24 @@
 <MyConfigDedicated xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <SessionSettings>
     <GameMode>Survival</GameMode>
-    <InventorySizeMultiplier>6</InventorySizeMultiplier>
-    <BlocksInventorySizeMultiplier>3</BlocksInventorySizeMultiplier>
-    <AssemblerSpeedMultiplier>5</AssemblerSpeedMultiplier>
-    <AssemblerEfficiencyMultiplier>5</AssemblerEfficiencyMultiplier>
-    <RefinerySpeedMultiplier>5</RefinerySpeedMultiplier>
+    <InventorySizeMultiplier>3</InventorySizeMultiplier>
+    <BlocksInventorySizeMultiplier>1</BlocksInventorySizeMultiplier>
+    <AssemblerSpeedMultiplier>3</AssemblerSpeedMultiplier>
+    <AssemblerEfficiencyMultiplier>3</AssemblerEfficiencyMultiplier>
+    <RefinerySpeedMultiplier>3</RefinerySpeedMultiplier>
     <OnlineMode>PUBLIC</OnlineMode>
     <MaxPlayers>4</MaxPlayers>
     <MaxFloatingObjects>56</MaxFloatingObjects>
-    <TotalBotLimit>128</TotalBotLimit>
-    <MaxBackupSaves>40</MaxBackupSaves>
+    <TotalBotLimit>32</TotalBotLimit>
+    <MaxBackupSaves>20</MaxBackupSaves>
     <MaxGridSize>0</MaxGridSize>
     <MaxBlocksPerPlayer>0</MaxBlocksPerPlayer>
-    <TotalPCU>2147483647</TotalPCU>
-    <PiratePCU>2147483647</PiratePCU>
+    <TotalPCU>100000</TotalPCU>
+    <PiratePCU>50000</PiratePCU>
     <MaxFactionsCount>0</MaxFactionsCount>
     <BlockLimitsEnabled>GLOBALLY</BlockLimitsEnabled>
     <EnableRemoteBlockRemoval>true</EnableRemoteBlockRemoval>
-    <EnvironmentHostility>NORMAL</EnvironmentHostility>
+    <EnvironmentHostility>SAFE</EnvironmentHostility>
     <AutoHealing>true</AutoHealing>
     <EnableCopyPaste>false</EnableCopyPaste>
     <WeaponsEnabled>true</WeaponsEnabled>
@@ -30,10 +30,10 @@
     <WorldSizeKm>0</WorldSizeKm>
     <RespawnShipDelete>false</RespawnShipDelete>
     <ResetOwnership>false</ResetOwnership>
-    <WelderSpeedMultiplier>3</WelderSpeedMultiplier>
-    <GrinderSpeedMultiplier>5</GrinderSpeedMultiplier>
+    <WelderSpeedMultiplier>2</WelderSpeedMultiplier>
+    <GrinderSpeedMultiplier>2</GrinderSpeedMultiplier>
     <RealisticSound>false</RealisticSound>
-    <HackSpeedMultiplier>7</HackSpeedMultiplier>
+    <HackSpeedMultiplier>0.33</HackSpeedMultiplier>
     <PermanentDeath>false</PermanentDeath>
     <AutoSaveInMinutes>10</AutoSaveInMinutes>
     <EnableSaving>true</EnableSaving>
@@ -43,7 +43,7 @@
     <ProceduralDensity>0.35</ProceduralDensity>
     <ProceduralSeed>0</ProceduralSeed>
     <DestructibleBlocks>true</DestructibleBlocks>
-    <EnableIngameScripts>true</EnableIngameScripts>
+    <EnableIngameScripts>false</EnableIngameScripts>
     <ViewDistance>15000</ViewDistance>
     <EnableToolShake>true</EnableToolShake>
     <VoxelGeneratorVersion>4</VoxelGeneratorVersion>
@@ -70,7 +70,7 @@
     <MaxDrones>5</MaxDrones>
     <EnableDrones>true</EnableDrones>
     <EnableWolfs>false</EnableWolfs>
-    <EnableSpiders>true</EnableSpiders>
+    <EnableSpiders>false</EnableSpiders>
     <FloraDensityMultiplier>1</FloraDensityMultiplier>
     <EnableStructuralSimulation>false</EnableStructuralSimulation>
     <MaxActiveFracturePieces>50</MaxActiveFracturePieces>
@@ -83,7 +83,7 @@
     <EnableTurretsFriendlyFire>false</EnableTurretsFriendlyFire>
     <EnableSubgridDamage>false</EnableSubgridDamage>
     <SyncDistance>3000</SyncDistance>
-    <ExperimentalMode>true</ExperimentalMode>
+    <ExperimentalMode>false</ExperimentalMode>
     <AdaptiveSimulationQuality>true</AdaptiveSimulationQuality>
     <EnableVoxelHand>true</EnableVoxelHand>
     <RemoveOldIdentitiesH>0</RemoveOldIdentitiesH>
@@ -106,11 +106,11 @@
     <EnableAutorespawn>false</EnableAutorespawn>
     <EnableBountyContracts>true</EnableBountyContracts>
     <EnableSupergridding>false</EnableSupergridding>
-    <EnableEconomy>true</EnableEconomy>
+    <EnableEconomy>false</EnableEconomy>
     <DepositsCountCoefficient>2</DepositsCountCoefficient>
-    <DepositSizeDenominator>45</DepositSizeDenominator>
+    <DepositSizeDenominator>30</DepositSizeDenominator>
     <WeatherSystem>true</WeatherSystem>
-    <HarvestRatioMultiplier>2</HarvestRatioMultiplier>
+    <HarvestRatioMultiplier>1</HarvestRatioMultiplier>
     <TradeFactionsCount>15</TradeFactionsCount>
     <StationsDistanceInnerRadius>10000000</StationsDistanceInnerRadius>
     <StationsDistanceOuterRadiusStart>10000000</StationsDistanceOuterRadiusStart>
@@ -123,7 +123,7 @@
     <EnableSelectivePhysicsUpdates>false</EnableSelectivePhysicsUpdates>
     <PredefinedAsteroids>true</PredefinedAsteroids>
     <UseConsolePCU>false</UseConsolePCU>
-    <MaxPlanets>96</MaxPlanets>
+    <MaxPlanets>99</MaxPlanets>
     <OffensiveWordsFiltering>false</OffensiveWordsFiltering>
     <AdjustableMaxVehicleSpeed>true</AdjustableMaxVehicleSpeed>
     <EnableMatchComponent>false</EnableMatchComponent>
@@ -174,8 +174,9 @@
   <AutoUpdateSteamBranch />
   <AutoUpdateBranchPassword />
   <IgnoreLastSession>false</IgnoreLastSession>
-  <PremadeCheckpointPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineersDedicatedServer\Content\CustomWorlds\Earth Planet\PC\Sandbox.sbc</PremadeCheckpointPath>
+  <PremadeCheckpointPath>D:\SteamLibrary\steamapps\common\SpaceEngineersDedicatedServer\Content\CustomWorlds\Earth Planet\XBox\Sandbox.sbc</PremadeCheckpointPath>
   <ServerDescription />
+  <ServerPasswordHash />
   <ServerPasswordSalt>1OD0ZzpasGHLp5cAb9n/eQ==</ServerPasswordSalt>
   <Reserved />
   <RemoteApiEnabled>true</RemoteApiEnabled>
@@ -196,5 +197,5 @@
   <SameMessageTimeout>30</SameMessageTimeout>
   <SpamMessagesTime>0.5</SpamMessagesTime>
   <SpamMessagesTimeout>60</SpamMessagesTimeout>
-  <DedicatedId>0</DedicatedId>
+  <DedicatedId>-4264239542926486891</DedicatedId>
 </MyConfigDedicated>
